--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -657,11 +657,13 @@
    <extension
          point="com.dynamo.cr.nodetypes">
       <node-type
-            node="com.dynamo.cr.tileeditor.scene.TileGridNode"
+            id="com.dynamo.cr.tileeditor.scene.tileGridNode"
             loader="com.dynamo.cr.tileeditor.scene.TileGridLoader"
+            node="com.dynamo.cr.tileeditor.scene.TileGridNode"
             resource-type="com.dynamo.cr.tileeditor.resourcetypes.TileGrid">
       </node-type>
       <node-type
+            id="com.dynamo.cr.tileeditor.scene.sprite2Node"
             loader="com.dynamo.cr.tileeditor.scene.Sprite2Loader"
             node="com.dynamo.cr.tileeditor.scene.Sprite2Node"
             resource-type="com.dynamo.cr.tileeditor.core.resourcetypes.sprite2">
