--- a/com.dynamo.cr.go.core/plugin.xml
+++ b/com.dynamo.cr.go.core/plugin.xml
@@ -4,8 +4,9 @@
    <extension
          point="com.dynamo.cr.nodetypes">
       <node-type
-            node="com.dynamo.cr.go.core.GameObjectNode"
+            id="com.dynamo.cr.go.core.nodes.gameObject"
             loader="com.dynamo.cr.go.core.GameObjectLoader"
+            node="com.dynamo.cr.go.core.GameObjectNode"
             presenter="com.dynamo.cr.go.core.GameObjectPresenter"
             resource-type="com.dynamo.cr.go.core.resourcetypes.gameObject">
       </node-type>
