--- a/com.dynamo.cr.luaeditor/plugin.xml
+++ b/com.dynamo.cr.luaeditor/plugin.xml
@@ -74,8 +74,9 @@
    <extension
          point="com.dynamo.cr.nodetypes">
       <node-type
-            node="com.dynamo.cr.luaeditor.scene.ScriptNode"
+            id="com.dynamo.cr.luaeditor.scene.nodes.script"
             loader="com.dynamo.cr.luaeditor.scene.ScriptLoader"
+            node="com.dynamo.cr.luaeditor.scene.ScriptNode"
             resource-type="com.dynamo.cr.luaeditor.resourcetypes.Script">
       </node-type>
    </extension>
