Use IRenderViewProvider in actual rendering case 394 * Background and "scene" is now rendered using providers * Selection logic moved to scene-provider

--- a/com.dynamo.cr.sceneed.ui/plugin.xml
+++ b/com.dynamo.cr.sceneed.ui/plugin.xml
@@ -76,5 +76,13 @@
          </enablement>
       </decorator>
    </extension>
+   <extension
+         point="com.dynamo.cr.nodetypes">
+      <node-type
+            id="com.dynamo.cr.sceneed.ui.backgroundNode"
+            node="com.dynamo.cr.sceneed.ui.BackgroundNode"
+            renderer="com.dynamo.cr.sceneed.ui.BackgroundRenderer">
+      </node-type>
+   </extension>
 
 </plugin>
