--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -111,9 +111,8 @@
         <module>../com.dynamo.cr.properties.test</module>
         <module>../com.dynamo.cr.sceneed</module>
         <module>../com.dynamo.cr.sceneed.test</module>
-        <module>../com.dynamo.cr.go.core</module>
-        <module>../com.dynamo.cr.go.core.test</module>
-        <module>../com.dynamo.cr.go.ui</module>
+        <module>../com.dynamo.cr.go</module>
+        <module>../com.dynamo.cr.go.test</module>
         <module>../javax.media.opengl</module>
     </modules>
 
