Add Animation Test. case 343
* Added getUniqueId for list and made it generic
* Added GroupNode to name and collect nodes of similar types ("Animations")
  - Also applied to CollisionGroupNode
* AddAnimationOperation with tests
* Also fixed editor to work as usual with new groups
* Also fixed erase tiles which was broken on presenter level (and test)

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -602,6 +602,9 @@
                   <reference
                         definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupSelected">
                   </reference>
+                  <reference
+                        definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupGroupSelected">
+                  </reference>
                </or>
             </visibleWhen>
          </command>
@@ -822,6 +825,9 @@
                <reference
                      definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupSelected">
                </reference>
+               <reference
+                     definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupGroupSelected">
+               </reference>
             </or>
          </activeWhen>
       </handler>
@@ -844,6 +850,12 @@
                </reference>
                <reference
                      definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupSelected">
+               </reference>
+               <reference
+                     definitionId="com.dynamo.cr.tileeditor.definitions.collisionGroupGroupSelected">
+               </reference>
+               <reference
+                     definitionId="com.dynamo.cr.tileeditor.definitions.animationGroupSelected">
                </reference>
             </or></activeWhen>
       </handler>
@@ -896,6 +908,30 @@
                   operator="or">
                <instanceof
                      value="com.dynamo.cr.tileeditor.scene.CollisionGroupNode">
+               </instanceof>
+            </iterate>
+         </with>
+      </definition>
+      <definition
+            id="com.dynamo.cr.tileeditor.definitions.collisionGroupGroupSelected">
+         <with
+               variable="selection">
+            <iterate
+                  operator="or">
+               <instanceof
+                     value="com.dynamo.cr.tileeditor.scene.CollisionGroupGroupNode">
+               </instanceof>
+            </iterate>
+         </with>
+      </definition>
+      <definition
+            id="com.dynamo.cr.tileeditor.definitions.animationGroupSelected">
+         <with
+               variable="selection">
+            <iterate
+                  operator="or">
+               <instanceof
+                     value="com.dynamo.cr.tileeditor.scene.AnimationGroupNode">
                </instanceof>
             </iterate>
          </with>
