--- a/com.dynamo.cr.sceneed.test/plugin.xml
+++ b/com.dynamo.cr.sceneed.test/plugin.xml
@@ -4,16 +4,16 @@
    <extension
          point="com.dynamo.cr.manipulators">
       <manipulator
-            mode="com.dynamo.cr.sceneed.core.manipulators.size-mode"
-            name="Test Size Manipulator"
-            node-type="com.dynamo.cr.sceneed.core.test.dummySphereSizeManipulator">
+            mode="com.dynamo.cr.sceneed.core.manipulators.scale-mode"
+            name="Test Scale Manipulator"
+            node-type="com.dynamo.cr.sceneed.core.test.dummySphereScaleManipulator">
       </manipulator>
    </extension>
    <extension
          point="com.dynamo.cr.nodetypes">
       <node-type
-            id="com.dynamo.cr.sceneed.core.test.dummySphereSizeManipulator"
-            node="com.dynamo.cr.sceneed.core.test.DummySphereSizeManipulator">
+            id="com.dynamo.cr.sceneed.core.test.dummySphereScaleManipulator"
+            node="com.dynamo.cr.sceneed.core.test.DummySphereScaleManipulator">
       </node-type>
    </extension>
 
