Editor integration case 390 * Flag support in Node * Node can be "TRANSFORMABLE" (flag) * Visible support in properties * Translation/Rotation are only visible for TRANSFORMABLE nodes * Select manipulator/mode * Select mode is default * Move and Rotate manipulators are only active for TRANSFORMABLE nodes

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -744,5 +744,23 @@
             node-type="com.dynamo.cr.ddfeditor.manipulators.capsuleSizeManipulator">
       </manipulator>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:com.dynamo.cr.sceneed.menus.sceneOutlineContext?before=com.dynamo.cr.sceneed.genericSeparator">
+         <command
+               commandId="com.dynamo.cr.sceneed.ui.commands.add"
+               label="Add Shape"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="com.dynamo.cr.ddfeditor.core.definitions.collisionObjectSelected">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
 
 </plugin>
